--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "date-fns": "^3.4.0",
     "framer-motion": "^11.11.9",
     "gray-matter": "^4.0.3",
-    "next": "^15.2.4",
+    "next": "^16.2.0-canary.33",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-hot-toast": "^2.4.1",
     "react-slick": "^0.30.2",
     "remark": "^15.0.1",
